--- a/index.html
+++ b/index.html
@@ -16,6 +16,35 @@
   </style>
 </head>
 <body class="font-sans text-gray-800">
+
+     <!-- 1. Navbar -->
+  <header class="w-full px-4 py-4 flex items-center justify-between bg-white shadow-md">
+    <div class="text-2xl font-bold text-green-700">Plantify</div>
+    <nav class="flex space-x-6 items-center">
+      <a href="#" class="hover:text-green-600">Home</a>
+      <a href="#" class="hover:text-green-600">Features</a>
+      <a href="#" class="hover:text-green-600">Shop</a>
+      <a href="#" class="hover:text-green-600">Contact</a>
+      <div class="relative">
+        <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" stroke-width="2"
+          viewBox="0 0 24 24">
+          <path d="M3 3h2l.4 2M7 13h10l4-8H5.4"></path>
+          <circle cx="7" cy="21" r="1"></circle>
+          <circle cx="20" cy="21" r="1"></circle>
+        </svg>
+      </div>
+    </nav>
+    <div class="flex items-center space-x-2">
+      <span class="text-sm font-medium">Cart</span>
+      <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" stroke-width="2"
+        viewBox="0 0 24 24">
+        <path d="M3 3h2l.4 2M7 13h10l4-8H5.4"></path>
+        <circle cx="7" cy="21" r="1"></circle>
+        <circle cx="20" cy="21" r="1"></circle>
+      </svg>
+    </div>
+  </header>
+
     
 </body>
 </html>
