--- a/index.html
+++ b/index.html
@@ -88,6 +88,35 @@
       });
     </script>
   </section>
+  <!-- 4. Plants Lover Section -->
+  <section class="flex flex-col flex-row items-center justify-between p-8 bg-gray-50">
+    <div class="w-1/2 relative">
+      <img src="B12A02-Responsive-Flowers/assets/flower-store.png" alt="Plant Lover" class="rounded-xl w-300px">
+      <span class="absolute top-4 right-4 bg-yellow-300 px-3 py-1 text-xs font-bold rounded-full spin-badge hidden inline-block">
+        Trusted 🌟
+      </span>
+    </div>
+    <div class="w-1/2 mt-6 space-y-3 text-left">
+      <h2 class="text-3xl font-bold text-green-700">Why Plant Lovers Choose Us</h2>
+      <ul class="list-disc list-inside text-gray-700">
+        <li>Carefully selected varieties</li>
+        <li>Healthy and pest-free plants</li>
+        <li>Fast, safe delivery</li>
+        <li>Easy care tips included</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- 5. Join Section -->
+  <section class="relative p-12 text-center text-white" style="background-image: url('B12A02-Responsive-Flowers/assets/news-letter-bg.png'); background-size: cover;">
+    <div class="bg-black bg-opacity-50 p-8 rounded-xl">
+      <h2 class="text-4xl font-bold mb-4">Join the Colorful Bunch</h2>
+      <div class="flex flex-col flex-row justify-center items-center gap-4 max-w-xl mx-auto">
+        <input type="email" placeholder="Enter your email" class="w-full px-4 py-2 rounded text-black" />
+        <button class="bg-green-600 hover:bg-green-700 px-6 py-2 rounded">Subscribe</button>
+      </div>
+    </div>
+  </section>
 
     
 </body>
