footer has beed added

--- a/index.html
+++ b/index.html
@@ -117,7 +117,18 @@
       </div>
     </div>
   </section>
-
+ <!-- 6. Footer Section -->
+  <footer class="bg-green-800 text-white p-8">
+    <div class="flex flex-col flex-row justify-between items-center gap-4">
+      <div class="text-xl font-bold">Plantify</div>
+      <div class="flex space-x-6">
+        <a href="#" class="hover:underline">Home</a>
+        <a href="#" class="hover:underline">Features</a>
+        <a href="#" class="hover:underline">Shop</a>
+        <a href="#" class="hover:underline">Contact</a>
+      </div>
+    </div>
+  </footer>
     
 </body>
 </html>
