--- a/index.html
+++ b/index.html
@@ -117,6 +117,33 @@
       </div>
     </div>
   </section>
+
+  
+  <!-- 7. Challenge Section -->
+  <section class="p-8 text-center">
+    <h2 class="text-3xl font-bold text-green-700">Latest Deals</h2>
+    <p class="text-gray-600 mb-6">Don't miss these blooming offers</p>
+    <div class="grid grid-cols-1 gap-6">
+      <div class="bg-white p-4 shadow rounded">
+        <img src="B12A02-Responsive-Flowers/assets/deal-bloom.png" class="mb-3 rounded w-full" alt="Deal Plant">
+        <h3 class="text-lg font-semibold">Special Plant Pack</h3>
+        <p class="text-sm text-gray-600">$25 only</p>
+      </div>
+      <div class="bg-white p-4 shadow rounded">
+        <img src="B12A02-Responsive-Flowers/assets/deal-ana.png" class="mb-3 rounded w-full" alt="Deal Plant">
+        <h3 class="text-lg font-semibold">Combo Offer</h3>
+        <p class="text-sm text-gray-600">Buy 2 Get 1 Free</p>
+      </div>
+      <div class="bg-white p-4 shadow rounded">
+        <img src="B12A02-Responsive-Flowers/assets/deal-zabo.png" class="mb-3 rounded w-full" alt="Deal Plant">
+        <h3 class="text-lg font-semibold">Mini Plants Set</h3>
+        <p class="text-sm text-gray-600">Perfect for desks</p>
+      </div>
+    </div>
+  </section>
+
+
+
  <!-- 6. Footer Section -->
   <footer class="bg-green-800 text-white p-8">
     <div class="flex flex-col flex-row justify-between items-center gap-4">
